--- a/src/Smartstore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
@@ -1,17 +1,15 @@
-﻿@using Smartstore.Web.Models.Catalog;
+﻿@using Smartstore.Web.Models.Catalog
 
 @model ProductSummaryModel
 
-@{
-    if (Model == null || !Model.Items.Any())
-    {
-        return;
-    }
+@if (Model == null || Model.Items.Count == 0)
+{
+    return;
 }
 
-<div class="pd-also-purchased block block-boxed mb-3">
+<div class="pd-also-purchased block block-boxed mb-3" role="region" aria-labelledby="pd-also-purchased-title">
     <div class="block-title">
-        <h3>@T("Products.AlsoPurchased")</h3>
+        <h3 id="pd-also-purchased-title">@T("Products.AlsoPurchased")</h3>
     </div>
     <div class="block-body pt-0">
         <div class="artlist-carousel">
