--- a/src/Smartstore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
@@ -2,16 +2,14 @@
 
 @model ProductSummaryModel
 
-@{
-    if (Model == null || !Model.Items.Any())
-    {
-        return;
-    }
+@if (Model == null || Model.Items.Count == 0)
+{
+    return;
 }
 
-<div class="pd-related-products block block-boxed mb-3">
+<div class="pd-related-products block block-boxed mb-3" role="region" aria-labelledby="pd-related-products-title">
     <div class="block-title">
-        <h2 class="fs-h3">@T("Products.RelatedProducts")</h2>
+        <h2 id="pd-related-products-title" class="fs-h3">@T("Products.RelatedProducts")</h2>
     </div>
     <div class="block-body pt-0">
         <div class="artlist-carousel">
