--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -81,21 +81,21 @@
                                 class="btn btn-secondary rounded-pill btn-sm"
                                 target="admin-product"
                                 rel="nofollow">
-                                <i class="fa fa-cog"></i>
+                                <i class="fa fa-cog" aria-hidden="true"></i>
                                 <span>@T("Common.Catalog.EditProduct")</span>
                             </a>
                         </div>
                     </aside>
                 </section>
 
-                <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants">
+                <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants" aria-labelledby="pd-assoc-list-title">
                     @if (Model.GroupedProduct?.Products?.Count > 0)
                     {
                         <div class="row mb-2 row-gap-2 align-items-center">
                             @if (Model.GroupedProduct.AssociatedProductsTitle.HasValue())
                             {
                                 <div class="col-12 col-lg-6">
-                                    <h3 class="pd-assoc-list-title mb-0">@Model.GroupedProduct.AssociatedProductsTitle</h3>
+                                    <h3 id="pd-assoc-list-title" class="pd-assoc-list-title mb-0">@Model.GroupedProduct.AssociatedProductsTitle</h3>
                                 </div>
                                 <div class="col-12 col-lg-6">
                                     <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
@@ -103,6 +103,7 @@
                             }
                             else
                             {
+                                <span id="pd-assoc-list-title" class="sr-only">@T("Admin.Catalog.Products")</span>
                                 <div class="col-12 col-lg-6 col-xxl-4">
                                     <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
                                 </div>
@@ -112,7 +113,7 @@
                     }
                     else
                     {
-                        <div class="pd-no-associated-products alert alert-warning">
+                        <div class="pd-no-associated-products alert alert-warning" role="alert">
                             @T("Products.NoAssociatedProducts")
                         </div>
                     }
