--- a/src/Smartstore.Web/Views/Product/Reviews.cshtml
+++ b/src/Smartstore.Web/Views/Product/Reviews.cshtml
@@ -26,7 +26,7 @@
         @if (Model.SuccessfullyAdded && Model.Result.HasValue())
         {
             <div class="alert alert-success alert-dismissible" role="alert">
-                <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-dismiss="alert" aria-label="@T("Common.Close")"></button>
                 @Model.Result
             </div>
         }
