--- a/src/Smartstore.Web/Views/Product/Partials/Product.Info.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Info.cshtml
@@ -4,6 +4,7 @@
 
 @{
     var brand = Model.Brands == null ? null : Model.Brands.FirstOrDefault();
+    var hasBrandImage = brand?.Image?.HasImage() ?? false;
 }
 
 <div class="pd-info pd-group">
@@ -13,10 +14,10 @@
 
     <!-- Brand -->
     <div sm-if="brand != null" class="pd-brand-block" itemprop="brand">
-        <a class="pd-brand" asp-route="Manufacturer" asp-route-SeName="@brand.SeName">
-            @if (brand.Image != null && brand.Image.HasImage())
+        <a class="pd-brand" asp-route="Manufacturer" asp-route-SeName="@brand.SeName" attr-aria-label='(hasBrandImage, brand.Image?.Title)'>
+            @if (hasBrandImage)
             {
-                <img sm-model="brand.Image" class="pd-brand-picture" attr-alt='(brand.Image.Alt.IsEmpty(), brand.Name)' />
+                <img sm-model="brand.Image" class="pd-brand-picture" />
             }
             else
             {
