--- a/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
@@ -14,14 +14,13 @@
         if (Model.Price.CallForPrice)
         {
             <div class="quote-request">
-                <a class="btn btn-secondary btn-lg btn-block action-ask-question" 
-                   href="javascript:;"
-                   rel="nofollow"
-                   data-href="@Url.Action("AskQuestionAjax", "Product", new { id = Model.Id })"
-                   data-form-selector="#pd-form">
+                <button type="button"
+                        class="btn btn-secondary btn-lg btn-block action-ask-question" 
+                        data-href="@Url.Action("AskQuestionAjax", "Product", new { id = Model.Id })"
+                        data-form-selector="#pd-form">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                     <span>@T("Products.CallForPrice.GoToForm")</span>
-                </a>
+                </button>
                 <div sm-if="Model.HotlineTelephoneNumber.HasValue()" class="quote-request-hotline">
                     <div>@T("Products.AskQuestion.CallHotline")<i class="fas fa-phone-flip px-1" aria-hidden="true"></i><span class="fwm">@Model.HotlineTelephoneNumber</span></div>
                 </div>
@@ -31,21 +30,19 @@
         {
             <div sm-if="!toCart.HideQuantityControl && !toCart.CollapsibleAssociatedProduct" class="col-auto pd-offer-action-qty">
                 @Html.EditorFor(model => model.AddToCart, "QtyInput", new { large = true, htmlAttributes = new { aria_label = T("Products.Qty") }})
-            </div>
-        
+            </div>        
             <div sm-if="!toCart.CollapsibleAssociatedProduct" class="col">
-                <a class="btn btn-primary btn-lg btn-block btn-add-to-cart ajax-cart-link"
-                   href="#"
-                   rel="nofollow"
-                   data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = toCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })'
-                   data-form-selector="#pd-form"
-                   data-type="cart"
-                   data-action="add"
-                   data-toggle="offcanvas" 
-                   data-target="#offcanvas-cart">
+                <button type="button"
+                        class="btn btn-primary btn-lg btn-block btn-add-to-cart ajax-cart-link"
+                        data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = toCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })'
+                        data-form-selector="#pd-form"
+                        data-type="cart"
+                        data-action="add"
+                        data-toggle="offcanvas" 
+                        data-target="#offcanvas-cart">
                     <i class="fa fa-cart-arrow-down d-none d-sm-inline-block d-md-none d-xl-inline-block" aria-hidden="true"></i>
                     <span>@T(toCart.AvailableForPreOrder ? "ShoppingCart.PreOrder" : "ShoppingCart.AddToCart")</span>
-                </a>
+                </button>
             </div>
         }
     }
